RESOLVED FIXED239096
REGRESSION: Web content process crashes when triggering Live Text in recoveryOS
https://bugs.webkit.org/show_bug.cgi?id=239096
Summary REGRESSION: Web content process crashes when triggering Live Text in recoveryOS
Wenson Hsieh
Reported 2022-04-11 16:33:58 PDT
Attachments
Patch (1.98 KB, patch)
2022-04-11 16:42 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2022-04-11 16:42:42 PDT
Wenson Hsieh
Comment 2 2022-04-11 17:27:02 PDT
Comment on attachment 457300 [details] Patch Thanks for the review!
EWS
Comment 3 2022-04-11 18:59:38 PDT
Committed r292756 (249540@main): <https://commits.webkit.org/249540@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 457300 [details].
Note You need to log in before you can comment on or make changes to this bug.