REGRESSION: Web content process crashes when triggering Live Text in recoveryOS https://bugs.webkit.org/show_bug.cgi?id=239096 rdar://91592943

Reviewed by Tim Horton.

Make encoding or decoding `RetainPtr<VKCImageAnalysis>` a no-op when the VisionKitCore framework is unavailable
on Cocoa platforms, rather than crashing (due to `PAL::getVKCImageAnalysisClass()` returning nil).

* Shared/Cocoa/WebCoreArgumentCodersCocoa.mm:
(IPC::ArgumentCoder<RetainPtr<VKCImageAnalysis>>::encode):
(IPC::ArgumentCoder<RetainPtr<VKCImageAnalysis>>::decode):

Canonical link: https://commits.webkit.org/249540@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292756 268f45cc-cd09-0410-ab3c-d52691b4dbfc